--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script type="text/javascript" src="/socket.io.js"></script>
     <meta charset="UTF-8">
     <title>Connected IPs</title>
 </head>
 <body>
-
+<script type="text/javascript">
+    let socket = io();
+    socket.on('add-ip', function (data) {
+        console.log(data);
+    });
+</script>
 </body>
 </html>
