Added: eslint and plugins

--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,13 @@
 <html lang="en">
 <head>
     <script type="text/javascript" src="/socket.io.js"></script>
+    <script type="text/javascript" src="/index.js"></script>
     <meta charset="UTF-8">
     <title>Connected IPs</title>
 </head>
 <body>
 <script type="text/javascript">
-    let socket = io();
-    socket.on('add-ip', function (data) {
-        console.log(data);
-    });
+
 </script>
 </body>
 </html>
