Added: add/remove client IPs logic

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
     <title>Connected IPs</title>
 </head>
 <body>
-<script type="text/javascript">
+<div id="ip-list">
 
-</script>
+</div>
 </body>
 </html>
