--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script type="text/javascript" src="/index.js"></script>
+    <script type="text/javascript" src="/dist/index.js"></script>
     <meta charset="UTF-8">
     <title>Connected IPs</title>
 </head>
